2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: fix botched indentation in perl TAP driver
	* lib/tap-driver.pl (main, Getopt::Long::GetOptions): Fix
	improper or botched indentation.

2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: some more tests on corner cases of TAP support
	* tests/tap-no-spurious.test: Extend checks verifying that a line
	matching, say, the regex "^ok[a-zA-Z0-9_]" is *not* considered a
	TAP result.
	* tests/tap-no-spurious-numbers.test: New test, checking that our
	TAP driver doesn't spuriously recognize as TAP result numbers what
	is not (even if it seems pretty close).
	* tests/tap-negative-numbers.test: New test, checking that our
	TAP driver doesn't spuriously recognize negative TAP result
	numbers, but correctly interprets them as test descriptions
	instead.
	* tests/tap-plan-leading-zero.test, tap-numbers-leading-zero.test:
	New tests, checking how our driver fares in recognizing numbers
	with leading zeroes in TAP results or TAP plans.
	* tests/tap-planskip-malformed.test: New test, checking that a
	malformed TAP plan is not recognized as a valid plan.
	* tests/tap-plan-whitespace.test: New test, checking that a TAP
	plan line with trailing whitespace is recognized and handled
	correctly.
	* tests/Makefile.am (tap_with_common_setup_tests): Update.

2011-08-19  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: fix some redundant autotools calls in tests on TAP
	* tests/tap-deps.test: Do not call autotools and configure; there
	is no need to, since this script sources `tap-setup.sh'.
	* tests/tap-empty-diagnostic.test: Likewise.
	* tests/tap-escape-directive.test: Likewise.
	* tests/tap-fancy2.test: Likewise.
	* tests/tap-no-spurious.test: Likewise.
	* tests/tap-out-of-order.test: Likewise.

2011-08-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	* THANKS (Daniel Richard G.): Update e-mail address.

2011-08-16  Daniel Richard G. <skunk@iskunk.org>  (tiny change)