@@ -1,5 +1,13 @@
 2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	coverage: a TAP result numbered "0" is always out-of-order
+	* tests/tap-test-number-0.test: New, checks that a test result
+	numbered as 0 is to be considered out-of-order; this is
+	consistent with the behaviour of the `prove' utility.
+	* tests/Makefile.am (tap_with_common_setup_tests): Update.
+
+2011-08-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	cosmetics: fix botched indentation in perl TAP driver
 	* lib/tap-driver.pl (main, Getopt::Long::GetOptions): Fix
 	improper or botched indentation.
